## CHANGELOG 1.0.0:

TODO

## CHANGELOG 0.4.2:

- Fixed a bug where the reactivity was not working when passing props.

## CHANGELOG 0.4.1:

- Fixed most of the ionicons icons that had problems.

- The following icon libraries have been updated:
  - ionicons

This update adds 14 new icons

## CHANGELOG 0.3.3:

- The following icon libraries have been updated:
  - ant-design-icons
  - boxicons
  - feather
  - font-awesome
  - heroicons
  - bootstrap-icons
  - simple-icons
  - vscode-codicons
  - weather-icons

This update adds 398 new icons

## CHANGELOG 0.3.2:

- Improved import with autocomplete

## CHANGELOG 0.3.1:

- Accept prop for external viewBox
- Remove unused types

## CHANGELOG 0.3.0:

- Fix Heroicons and Ant Design fill/stroke
- [Icons showcase website](https://solid-icons-web.vercel.app/) is live 🚀
- IconWrapper main component accept reactive props
- Most of the icon packs have been updated to the latest version.